# webp-gempyre

./: CMakeLists.txt  README.md
cmake/: webp_gempyreConfig.cmake
src/: webp.cpp  webp.hpp
test/: CMakeLists.txt  test.cpp  test.html
webp2png/: CMakeLists.txt  main.cpp
